searchbar fixed on mobile

--- a/frontend/src/components/styles/layout/_search.scss
+++ b/frontend/src/components/styles/layout/_search.scss
@@ -7,6 +7,13 @@
   margin-bottom: 1rem;
   // height: 400px;
 
+  @media (max-width: 400px) {
+    // background-color: crimson;
+    height: 28rem;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
   &__dropdown {
     width: 20rem;
     margin: 0.3rem 0.5rem;
@@ -34,6 +41,9 @@
       @media (max-width: 700px) {
         height: 36rem;
       }
+      @media (max-width: 400px) {
+        height: 33rem;
+      }
     }
 
     &-img img {
@@ -43,15 +53,19 @@
       position: absolute;
       width: 100%;
       height: 100%;
+      padding: 6em;
+      background: rgba(66, 70, 81, 0.3);
+      // border-radius: 20px;
       @media (max-width: $desktop) {
         height: 50%;
       }
       @media (max-width: $tablet) {
         height: 75%;
       }
-      padding: 6em;
-      background: rgba(66, 70, 81, 0.3);
-      // border-radius: 20px;
+      @media (max-width: 400px) {
+        height: 100%;
+        padding-top: 7rem;
+      }
     }
 
     &-panel {
